2014-11-03  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix.m: (0.4.2)

	- Fix bug. Other functions expect the intial transform to be
	opts.t0 instead of opts.T0.

	* matlab/ItkToolbox/elastix_read_reg_output.m: (0.2.2)

	- Fix bug. Sometimes, elastix can produce an empty iteration info
	file. Trying to read it gave an error. Now, if the file is empty
	we return empty iterInfo.

	* matlab/FileFormatToolbox/imread_list.m: (0.1.1)

	- Fix bug. Wrong variable name.

	* matlab/ManifoldToolbox/tri_sphparam.m: (0.4.5)

	- Even if the initial guess points provided by the user are within
	the sphere radius tolerance, we reproject them on the sphere,
	because tiny radius errors can create neighbourhoods that cannot
	be untangled.

	* matlab/CardiacToolbox/histology_intraframe_reg.m: (0.2.2)

	- Fix bug. Wrong number when checking number of output arguments.

	- Fix bug. Other functions expect the intial transform to be
	opts.t0 instead of opts.T0.

	- Rename input argument from PATHTOFILES to PATHSTR for uniformity
	with other function in the toolbox.

2014-10-31  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/FileFormatToolbox/imread_list.m: (0.1.0)

	- IMREAD_LIST  Read list of image files into volume.

	* Rename matlab/CardiacToolbox/blockface_imread_gray.m (0.1.1) as
	matlab/FileFormatToolbox/imread_list.m: (0.1.0)

	- Reading a list of images into a volume is a function of general
	interest, it made no sense that it was in CardiacToolbox and
	called "blockface_imread_gray".

2014-10-30  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* renamed matlab/CardiacToolbox/DT_to_image.m: (0.1.0) to 
	matlab/CardiacToolbox/dt2image.m (0.1.0)

2014-10-27  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ItkToolbox/elastix_affine_tform2param.m: (0.1.0)

	- elastix_affine_tform2param Convert Matlab tform affine transform
	to elastix parameter vector.

2014-10-27  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* Add matlab/CardiacToolbox/fit_DT.m: (0.1.1)